--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
 
                     // Artist
                     $("<td width='40%'>" + info[i].artist + "</td>").appendTo(str);
-
+                    
                     // Comment
                     $("<td width='10%'>" + info[i].comment + "</td>").appendTo(str);
+
+                    //url_diff
+                    $("<td width='40%'>" + info[i].url_diff + "</td>").appendTo(str);
+
+                     //url
+                    $("<td width='40%'>" + info[i].url + "</td>").appendTo(str);
                     str.appendTo(obj);
                     count++;
 
