--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
         <div class="alert alert-success mb-3" role="alert">
             <p>obj:R1Nによる譜面のまとめです。</p>
-            <p>難易度表の読み込みと表示に数秒かかります。</p>
+            <p>難易度表の読み込みと表示に数秒かかります。 管理:https://x.com/nn3_r1</p>
             <hr>
-            <p class="mb-0">SP/DPで分けてますが、難度の目安はコメントを参照してください。 管理:https://x.com/nn3_r1</p>
+            <p class="mb-0">SP/DPで分けてますが、難度の目安はコメントを参照してください。</p>
         </div>
 
 
